--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -4,7 +4,8 @@ Today we are going to write a game!
 A massively multiplayer game!
 
 We are going to use Materialize to implement a cooperative version of [Minesweeper](https://en.wikipedia.org/wiki/Minesweeper_(video_game)), inspired by https://m3o.xyz.
-We are also going to make what I think is a pretty cool tweak to it, that will allow teams of folks to collaborate more effectively.
+We are also going to make what I think is a pretty cool tweak to it, that will allow teams of folks to collaborate in more interesting ways!
+But that part comes much later.
 
 Of course, we are also going to show off some of the new and interesting properties of Materialize as we do!
 
@@ -15,20 +16,48 @@ Your job is to discover where the mines are, indirectly.
 Rather than click on any mines, instead you are meant to click on non-mine squares, and be told the number of adjacent squares (at most eight) that hide a mine.
 Using these numbers and your high-powered noggin you are meant to deduce which squares must have mines, and then which squares cannot have mines, click on them, and repeat indefinitely.
 
-Mechanically, you can "left click" on a square to reveal its count (or explode), and you can "right click" on a square to flag it as a purported mine.
+
+Here's an example visual that we will actually build up to.
+Each grid location is a count of the number of adjacent mines, or "`.`" to indicate "unknown".
+```
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . 2 1 2 1 3 X . . . . . .
+ . . . . . . . . . 1 0 0 0 1 2 X . . . . .
+ . . . . . . . . . 1 0 0 0 0 1 1 1 1 . . .
+ . . . . . . . . . 1 1 1 1 1 0 0 0 1 . . .
+ . . . . . . . . . . . . X 2 1 0 1 1 . . .
+ . . . . . X X 2 2 2 . . . X 1 0 1 X . . .
+ . . . 2 1 2 2 1 0 1 X 1 1 1 1 0 1 2 . . .
+ . . . 2 0 0 0 0 0 1 1 1 0 0 0 0 0 1 . . .
+ . . . 2 1 0 0 0 0 0 0 0 0 0 0 0 1 2 . . .
+ . . . X 1 1 1 1 0 0 1 1 2 1 1 1 2 X . . .
+ . . . . . . X 1 1 1 2 X . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . . . . . . .
+```
+
+Mechanically, you the user "left click" on a square to reveal its count (or explode), and "right click" on a square to flag it as a purported mine.
 
 ### Scaling Minesweeping
 
 Minesweeper is normally played on a bounded grid, but there is no reason this needs to be the case.
 
 The rules of Minesweeper make plenty of sense even if the grid cells spill off the side of the window you are looking at.
-There is no reason you shouldn't be able to scroll around, beyond the limits of the window you might initially open.
+Moreover, there is no reason you shouldn't be able to scroll around, beyond the limits of the window you might initially open.
 
 There is no reason you shouldn't be able to play minesweeper on a 2^64 x 2^64 game board, where you just happen to pick your favorite coordinate to center your screen on.
+We are going to do that.
 
-To make this work, obviously you won't be able to actually populate 2^128 cells with mines or not.
-Instead, you can use a pseudorandom function from (x, y) to tell you whether a mine exists or not.
-Of course, you only evaluate the locations around those that a user has clicked on, determining where mines exist lazily but consistently.
+To make this work, obviously we won't be able to actually populate 2^128 cells.
+Instead, we will use a pseudorandom function from `(x, y)` to tell you whether a mine exists at location `(x, y)` or not.
+Of course, we will only evaluate the locations around those that a user has clicked on, determining where mines exist lazily but consistently.
 
 ### Multiplayer Minesweeper
 
@@ -47,11 +76,12 @@ First, clicking on a mine would normally end the game.
 It won't do that here.
 We'll keep track of the number of mines you've clicked on, and perhaps the leaderboards will reflect area uncovered and mines uncovered, in something of a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_front).
 
-Second, rather than rolling a die to see if a grid cell has a mine for everyone, each grid cell *will* have a mine and we'll roll a die to stamp a number onto the mine.
+Second, rather than rolling a die to see *if* a grid cell has a mine for everyone, each grid cell *will* have a mine and we'll roll a die to stamp a number onto the mine.
+You can play the game where `0` is what means "mine".
+Your friend can play the game where `1` is what means "mine".
 Each player plays wearing a certain numbered hat, and observes (and is exploded by) mines of their number.
 For any one player, it is as if they are playing Minesweeper with random mine locations.
-For any two players, each appear to be playing Minesweeper with random mine locations.
-But if two or more players team up, their information can leak across the team: locations flagged by players with one number are *safe* for players with another number.
+But if two or more players team up, they can share their information can across the team: locations flagged by players with one number are *safe* for players with another number.
 
 This second change has the cool property that one player racing ahead of others leaves behind breadcrumbs that allow the others to catch up.
 If you aren't wild about the change, just get all your friends to pick the same number and you'll see the same mines.
@@ -67,14 +97,18 @@ We are going to start with some module-level documentation describing our plan:
 
 ### Base Tables
 
-We'll model user input as either a guess that a location is a mine (so, "has the value `foo`") or a guess that a location is mine-free (so, "does not have the value `foo`).
+We'll model user input as either a guess that a location is a mine ("has the value `foo`") or a guess that a location is mine-free ("does not have the value `foo`").
 
 Let's start with the guesses that a location is a mine (represented in the game as a flag).
 We'll add a few helpful views to make sure we don't accidentally treat `flags` as the truth.
 ```sql
--- Each "flag" is a supposition that the `mine` value is `flag`.
+-- Each "flag" is a supposition by `user` that the `mine` value is `flag`.
 create table flags (x int, y int, flag int, user text);
+
+-- Protect ourselves against the confusion of multiple entries.
 create view distinct_flags as select distinct * from flags;
+
+-- Restrict ourselves to correctly flagged mines.
 create view correct_flags as
 select x, y, flag, user from distinct_flags
 where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 = flag;
@@ -94,18 +128,25 @@ The guesses that a location is *not* a mine are handled similarly, but with an i
 ```sql
 -- Each "test" is a supposition that the `mine` value is not `test`.
 create table tests (x int, y int, test int, user text);
-create view distinct_tests as select distinct * from tests;
+
+-- Protect ourselves against the confusion of multiple entries.
+create materialized view distinct_tests as select distinct * from tests;
+
+-- Restrict ourselves to correctly tested locations.
 create view correct_tests as
 select x, y, test, user from distinct_tests
 where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 != test;
 ```
 
-These two tables will record the state of the game.
-Players can play by inserting into these tables.
-If they guess wrong the game still goes on, but we'll make some views to notice the errors.
+These two tables, `flags` and `tests`, will record the state of the game.
+Players play by inserting into these tables using their `user` name.
+
+### Observing some output
+
+If players guess wrong the game still goes on, but let's make some views to notice the errors.
 ```sql
 -- Errors are too bad. But they don't end the game.
-create view errors as
+create materialized view errors as
 select x, y, flag as mine, 'flag' as action, user
 from distinct_flags where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 != flag
 union all
@@ -140,25 +181,15 @@ INSERT 0 1
 ```
 Nothing to report in the other session with the `TAIL`.
 This entry wasn't erroneous, and so "no change" in the view.
-Had we run the `TAIL` with the `PROGRESS` option, there would be a steady heartbeat of timestamp messages confirming that no changes have occured, not just that the session is backed up.
+Had we run the `TAIL` with the `PROGRESS` option, there would be a steady heartbeat of timestamp messages confirming that no changes have occured, which affirmatively distinguishes from the case that the session is just backed up.
 
 ### Probing Locations
 
 Our next step is to take our `flag` and `test` collections, and have them prompt reported numbers.
 A correct `test` reveals the count under it, as in standard minesweeper.
-Additionally, a correct `flag` reveals the counts for all other players.
-We'll call that collection of location and player `probes`.
-
-```sql
--- A correct test results in a probe and report for that value.
-create view probes as
-select x, y, test as mine, user
-from correct_tests;
+With our current correct guesses about `(0, 0)`, the probes we should perform are:
 ```
-
-With our current correct guess about `(0, 0)`, the probes we should perform are:
-```
-materialize=> select * from probes;
+materialize=> select * from correct_tests;
  x | y | mine | user
 ---+---+------+------
 (0 rows)
@@ -172,7 +203,7 @@ We could do that automatically, but let's ask folks to do this themselves.
 ```
 materialize=> insert into tests values (0, 0, 0, 'frank');
 INSERT 0 1
-materialize=> select * from probes;
+materialize=> select * from correct_tests;
  x | y | mine | user
 ---+---+------+-------
  0 | 0 |    0 | frank
@@ -187,10 +218,10 @@ Having done this, we aggregate up each probe and have a count to report!
 
 ```sql
 -- Each tested location invokes a probe at neighbor locations.
-create view probe_neighbors as
+create view probes as
 select distinct probe_x, probe_y, x, y, user
 from
-    probes,
+    correct_tests,
     generate_series(x - 1, x + 1) as probe_x,
     generate_series(y - 1, y + 1) as probe_y
 where x != probe_x OR y != probe_y;
@@ -198,15 +229,18 @@ where x != probe_x OR y != probe_y;
 -- Each location reports some flavor of mine.
 create view reports as
 select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine, user
-from probe_neighbors;
+from probes;
 
 -- The number of adjacent mines for probed locations.
-create view totals as
-select probes.x, probes.y, probes.mine, (
+create materialized view totals as
+select correct_tests.x, correct_tests.y, correct_tests.test as mine, (
     select count(*) from reports
-    where probes.x = reports.x and probes.y = reports.y and probes.mine = reports.mine and probes.user = reports.user
+    where correct_tests.x = reports.x
+      and correct_tests.y = reports.y
+      and correct_tests.test = reports.mine
+      and correct_tests.user = reports.user
 ), user
-from probes
+from correct_tests
 group by 1, 2, 3, 5;
 ```
 
@@ -221,9 +255,9 @@ materialize=> select * from totals;
 materialize=>
 ```
 
-Luckily mine type `0` has no mines around it, and its neighbors should probably be clicked upon!
+Luckily mine type `0` has no mines around it, and we should probably click upon all of its neighbors!
 
-Before going down that rabbit hole, let's figure out how to present this information.
+Before going down that rabbit hole, let's first figure out how to present this information.
 
 ## Presenting Information
 
@@ -232,6 +266,7 @@ How do we get that information back to individual players without overwhelming t
 
 Each player can interrogate the game board with a *viewport*.
 This is a description of a rectangular region, all of whose reported counts should be returned.
+We also need to include the `mine` and `user`, to know how to present the information, and which subset to present.
 
 ```sql
 -- Each entry here results in an output viewport (window) for a certain mine.
@@ -248,29 +283,49 @@ select distinct x, y, mine, user from
 ;
 ```
 
-To actually get something presentable we'll convert all counts to symbols, and then left join with `cells` to be sure we can present *something* (a `.`) for locations without a count.
+To get something presentable, we'll fire off some subqueries for each element of `cell`, looking around in other relations that present data.
+In particular, we'll first look to see if there is a reported count, then if there is a flagged mine, and finally whether there is a flagged mine of a different type.
 ```sql
--- Convert counts to symbols, and include '.' for empty locations.
-create view symbols2 as
-select x, y, mine, case when symbol isnull then ' .' else symbol end, user
-from
-cells left join (
-    select x as x2, y as y2, mine as mine2, ' ' || count::text as symbol, user as user2 from totals
-    union all
-    select x as x2, y as y2, flag as mine2, ' X' as symbol, user as user2 from correct_flags
-) on (cells.x = x2 and cells.y = y2 and cells.mine = mine2 and cells.user = user2);
+-- Convert counts to symbols, mines, clear cells, and include '.' for unknown locations.
+create materialized view composited as
+select x, y, mine, user,
+    case
+        when count is not null then count
+        when mined is not null then mined
+        when clear is not null then clear
+        else ' .'
+    end as symbol
+from (
+    select x, y, mine, user,
+        (   -- counts from probes associated with this user.
+            select ' '::text || count::text as count
+            from totals
+            where cells.x = totals.x and cells.y = totals.y and cells.mine = totals.mine and cells.user = totals.user
+        ),
+        (   -- a red `X` for mines correctly flagged by this user.
+            select e'\u001b[31m X\u001b[0m' as mined
+            from correct_flags
+            where cells.x = correct_flags.x and cells.y = correct_flags.y and cells.mine = correct_flags.flag and cells.user = correct_flags.user
+        ),
+        (   -- a blue `*` for locations known to be safe by flags of other mines.
+            select e'\u001b[34m *\u001b[0m' as clear
+            from correct_flags
+            where cells.x = correct_flags.x and cells.y = correct_flags.y and not cells.mine = correct_flags.flag
+        )
+    from cells
+);
 
 -- Create lines of output by grouping by `y`.
 create view output as
 select y, mine, string_agg(symbol, '' ORDER BY x) AS whole_row, user
-from symbols
+from composited
 group by y, mine, user;
 ```
 
 To view the output, we'll need to introduce some viewports, specifying rectangle and mine type:
 
 ```sql
--- Define overlapping viewports.
+-- Define some overlapping viewports.
 insert into viewport values (-10, 10, -10, 10, 0, 'frank');
 insert into viewport values (-5, 10, -5, 5, 1, 'arjun');
 ```
@@ -332,18 +387,17 @@ materialize=>
 ```
 
 Equally fascinating!
-The same location, our correct guess that the `(0, 0)` mine has type `1`, is visible on both outputs!
+The same location, with different takes for different players, is visible on both outputs!
 
 Let's now ramp up the amount of visible information by making some informed guesses.
 
 ## Using SQL to play Minesweeper
 
-You can play Minesweeper by repeatedly `INSERT`ing into `flags` and `tests`.
-
+You play Minesweeper by repeatedly `INSERT`ing into `flags` and `tests`.
 This probably gets tedious very quickly.
 I couldn't tell you; I haven't tried.
 
-Instead, we can write SQL queries to produce modifications to these tables and insert them.
+Instead, we can write SQL queries to produce modifications to these tables.
 
 ### Determining locations to test
 
@@ -353,7 +407,7 @@ This is just a matter of looking at `totals` for counts of zero, and testing all
 ```sql
 -- We can test locations we know have no adjacent mines!
 -- In fact, we can do this over and over until we stop inserting things.
-create view should_test as
+create materialized view should_test as
 select distinct new_x as x, new_y as y, mine as test, user
 from
     (select * from totals where count = 0),
@@ -550,7 +604,7 @@ This rule is great for filling in all of those nooks and crannies you see up abo
 
 ```sql
 -- We can flag locations when the count equals the number of untested neighbors.
-create view should_flag_from as
+create materialized view should_flag_from as
 select x, y, mine as flag, user
 from totals
 where totals.count > 0 and totals.count = 9 - (select count(*) from (
@@ -639,17 +693,28 @@ Look at all those `X` things!
 
 Having marked all these mines of type `0`, the boards for other mine types can be updated!
 Remember, each of these mines mean that the grid cell is free of mines of other types.
-Let's add all of our correct mine placement to `tests` for another user.
-
+If we peek, we'll see blue asterisks indicating where mines have been flagged by others.
 ```
-materialize=> insert into tests select x, y, 1, 'arjun' from correct_flags where not flag = 1;
-INSERT 0 12
+materialize=> select whole_row from output where mine = 1 and user = 'arjun' order by y;
+ . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . .
+ . . . . . . . . . . . . . . . .
+ . . . . . . . . . * . . . . . .
+ . . . . . . . . . . * . . . . .
+ . . . . . X . . . . . . . . . .
+ . . . . . . . . . . . . . . . .
+ . . . . . . . * . . . . . . . .
+ * * . . . . . . * . . . * . . .
+ . . . . . * . . . . . . . . . .
+ . . . . . . . . . . . . . . . .
 materialize=>
 ```
 
-Now we can check out that other viewport and see what is afoot there.
-
+Fortunately, `arjun` can see them as blue
+Let's add all of our correct mine placement to `tests` for another user.
 ```
+materialize=> insert into tests select x, y, 1, 'arjun' from correct_flags where not flag = 1;
+INSERT 0 12
 materialize=> select whole_row from output where mine = 1 and user = 'arjun' order by y;
             whole_row
 ----------------------------------
@@ -769,4 +834,190 @@ materialize=> select whole_row from output where mine = 2 and user = 'brent' ord
 materialize=>
 ```
 
-That spills off the viewport in a few directions!
+The expanded regions spill off the viewport in a few directions!
+
+## Going interactive
+
+Everything we've done so far has been vanilla SQL.
+While Materialize does this well, and scales out, we haven't used its super power yet.
+
+Let's do that now by making each viewport continually update in response to changes made by *others*.
+
+```
+materialize=> copy (tail (select y, whole_row from output where mine = 0 and user = 'frank')) to stdout;
+1660070908901	1	0	 . . . . . . . . . 1 0 0 0 0 1 1 1 1 . . .
+1660070908901	1	1	 . . . . . . . . . 1 1 1 1 1 0 0 0 1 . . .
+1660070908901	1	5	 . . . 2 0 0 0 0 0 1 1 1 0 0 0 0 0 1 . . .
+1660070908901	1	6	 . . . 2 1 0 0 0 0 0 0 0 0 0 0 0 1 2 . . .
+1660070908901	1	9	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	10	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-10	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-9	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-8	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-7	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-6	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-5	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-4	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	-3	 . . . . . . . . . . . . . . . . . . . . .
+1660070908901	1	2	 . . . . . . . . . . . . X 2 1 0 1 1 . . .
+1660070908901	1	4	 . . . 2 1 2 2 1 0 1 X 1 1 1 1 0 1 2 . . .
+1660070908901	1	-2	 . . . . . . . . . 2 1 2 1 3 X . . . . . .
+1660070908901	1	-1	 . . . . . . . . . 1 0 0 0 1 2 X . . . . .
+1660070908901	1	7	 . . . X 1 1 1 1 0 0 1 1 2 1 1 1 2 X . . .
+1660070908901	1	8	 . . . . . . X 1 1 1 2 X . . . . . . . . .
+1660070908901	1	3	 . . . . . X X 2 2 2 . . . X 1 0 1 X . . .
+```
+
+Well, we've lost some of the visual flair, unfortunately.
+You will have to imagine this being elegantly presented to users, as this is not something `psql` was designed for.
+
+However, if we crack open a different terminal, we can `TAIL` each of the other players.
+```
+materialize=> copy (tail (select y, whole_row from output where mine = 1 and user = 'arjun')) to stdout;
+1660071032901	1	1	 . . . . . . . . . . . . . . . .
+1660071032901	1	2	 . . . . . . . 2 . . . . . . . .
+1660071032901	1	3	 1 1 . . . . . . 1 . . . 2 . . .
+1660071032901	1	4	 . . . . . 1 . . . . . . . . . .
+1660071032901	1	5	 . . . . . . . . . . . . . . . .
+1660071032901	1	-5	 . . . . . . . . . . . . . . . .
+1660071032901	1	-4	 . . . . . . . . . . . . . . . .
+1660071032901	1	-3	 . . . . . . . . . . . . . . . .
+1660071032901	1	-2	 . . . . . . . . . 3 . . . . . .
+1660071032901	1	-1	 . . . . . . . . . . 1 . . . . .
+1660071032901	1	0	 . . . . . X . . . . . . . . . .
+```
+and
+```
+materialize=> copy (tail (select y, whole_row from output where mine = 2 and user = 'brent')) to stdout;
+1660071083901	1	0	 1 1 0 0 0 0 1 1 1 1 2 . . . . . . . . 1 1
+1660071083901	1	1	 1 0 0 0 0 1 2 . 1 0 1 1 2 1 . . . . . 1 0
+1660071083901	1	2	 1 0 0 0 0 1 . . 2 0 0 0 0 1 . . . . . 2 1
+1660071083901	1	3	 1 0 0 0 0 1 3 . 4 2 1 1 2 3 . . . 3 . . 1
+1660071083901	1	4	 1 0 1 1 1 1 . . . . 2 . . . . . . . . 2 1
+1660071083901	1	5	 1 0 1 . . . . . . . . . . . . . 1 1 1 1 0
+1660071083901	1	6	 1 0 1 1 1 1 3 . . . . . . . . . 2 0 0 0 0
+1660071083901	1	7	 0 0 0 0 0 0 2 . . . . . . . . . 2 0 0 0 0
+1660071083901	1	8	 0 1 1 2 1 1 1 . . . . 1 . . . . 4 1 2 1 1
+1660071083901	1	9	 0 1 . . . . . . . . . . . . . . . . . . .
+1660071083901	1	10	 0 1 1 2 1 2 . . . . . . . . . . . . . . .
+1660071083901	1	-10	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-9	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-8	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-7	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-6	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-5	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-4	 . . . . . . . . . . . . . . . . . . . . .
+1660071083901	1	-3	 . . . . . . . . . . . . 1 1 1 2 . . . . .
+1660071083901	1	-2	 . . . . . 2 2 1 1 1 . . 1 0 0 1 . . . . .
+1660071083901	1	-1	 . 1 1 2 2 1 0 0 0 1 . . 2 1 2 2 . . . . .
+```
+
+### Playing the game
+
+At this point, `brent` has a bunch of `X` marks to place.
+Let's do that.
+
+We got some immediate and new output for each of our players.
+Respectively,
+```
+1660071152677	-1	1	 . . . . . . . . . 1 1 1 1 1 0 0 0 1 . . .
+1660071152677	-1	9	 . . . . . . . . . . . . . . . . . . . . .
+1660071152677	-1	10	 . . . . . . . . . . . . . . . . . . . . .
+1660071152677	1	1	 . . . . . . . * . 1 1 1 1 1 0 0 0 1 . . .
+1660071152677	-1	2	 . . . . . . . . . . . . X 2 1 0 1 1 . . .
+1660071152677	-1	4	 . . . 2 1 2 2 1 0 1 X 1 1 1 1 0 1 2 . . .
+1660071152677	1	9	 . . * . . . . . . . . . . . . . . . . . .
+1660071152677	1	10	 . . . . . . * . . . . . . . . . . . . . .
+1660071152677	-1	-2	 . . . . . . . . . 2 1 2 1 3 X . . . . . .
+1660071152677	-1	-1	 . . . . . . . . . 1 0 0 0 1 2 X . . . . .
+1660071152677	1	2	 . . . . . . * . . . . . X 2 1 0 1 1 . . .
+1660071152677	1	4	 . . . 2 1 2 2 1 0 1 X 1 1 1 1 0 1 2 * . .
+1660071152677	1	-1	 * . . . . . . . . 1 0 0 0 1 2 X . . . . .
+1660071152677	1	-2	 . . . * * . . . . 2 1 2 1 3 X . . . . . .
+1660071152677	-1	3	 . . . . . X X 2 2 2 . . . X 1 0 1 X . . .
+1660071152677	1	3	 . . . . . X X 2 2 2 . . . X 1 0 1 X . * .
+```
+and
+```
+1660071152677	-1	1	 . . . . . . . . . . . . . . . .
+1660071152677	-1	2	 . . . . . . . 2 . . . . . . . .
+1660071152677	-1	3	 1 1 . . . . . . 1 . . . 2 . . .
+1660071152677	-1	4	 . . . . . 1 . . . . . . . . . .
+1660071152677	-1	-1	 . . . . . . . . . . 1 . . . . .
+1660071152677	-1	0	 . . . . . X . . . . . . . . . .
+1660071152677	1	1	 . . * . . . . . . . . . . . . .
+1660071152677	1	2	 . * . . . . . 2 . . . . . . . .
+1660071152677	1	3	 1 1 . . . . . . 1 . . . 2 . * .
+1660071152677	1	-1	 . . . . . * . . . . 1 . . . . .
+1660071152677	1	0	 . . . . . X * . . . . . . . . .
+1660071152677	1	4	 . . . * * 1 . . . . . . . * . .
+```
+and
+```
+1660071152677	-1	0	 1 1 0 0 0 0 1 1 1 1 2 . . . . . . . . 1 1
+1660071152677	-1	1	 1 0 0 0 0 1 2 . 1 0 1 1 2 1 . . . . . 1 0
+1660071152677	-1	2	 1 0 0 0 0 1 . . 2 0 0 0 0 1 . . . . . 2 1
+1660071152677	-1	3	 1 0 0 0 0 1 3 . 4 2 1 1 2 3 . . . 3 . . 1
+1660071152677	-1	4	 1 0 1 1 1 1 . . . . 2 . . . . . . . . 2 1
+1660071152677	-1	5	 1 0 1 . . . . . . . . . . . . . 1 1 1 1 0
+1660071152677	-1	9	 0 1 . . . . . . . . . . . . . . . . . . .
+1660071152677	-1	10	 0 1 1 2 1 2 . . . . . . . . . . . . . . .
+1660071152677	-1	-2	 . . . . . 2 2 1 1 1 . . 1 0 0 1 . . . . .
+1660071152677	-1	-1	 . 1 1 2 2 1 0 0 0 1 . . 2 1 2 2 . . . . .
+1660071152677	1	0	 1 1 0 0 0 0 1 1 1 1 2 X . . . . . . . 1 1
+1660071152677	1	1	 1 0 0 0 0 1 2 X 1 0 1 1 2 1 . . . . . 1 0
+1660071152677	1	2	 1 0 0 0 0 1 X . 2 0 0 0 0 1 . . . . . 2 1
+1660071152677	1	3	 1 0 0 0 0 1 3 . 4 2 1 1 2 3 . . . 3 . X 1
+1660071152677	1	5	 1 0 1 X . . . . . . . . . . . . 1 1 1 1 0
+1660071152677	1	9	 0 1 X . . . . . . . . . . . . . . . . . .
+1660071152677	1	10	 0 1 1 2 1 2 X . . . . . . . . . . . . . .
+1660071152677	1	-2	 . . . X X 2 2 1 1 1 . . 1 0 0 1 . . . . .
+1660071152677	1	-1	 X 1 1 2 2 1 0 0 0 1 X . 2 1 2 2 . . . . .
+1660071152677	1	4	 1 0 1 1 1 1 . . X X 2 . . . . . . . X 2 1
+```
+
+That's all a bit of a mess.
+If you look hard you'll notice that lines are changing for the first two players through the addition of `*` symbols.
+For the third player, it is the addition of `X` symbols.
+
+This becomes much clearer if we were to `TAIL` the `composited` materialized view.
+That is the view with the `(x, y, symbol)` columns, before we format it in to lines.
+It ends up much leaner, indicating only the exact `(x, y)` locations that have changed, and from which symbol to which.
+
+### Reshaphing the viewports
+
+Let's say `brent` wants to move his viewport around, as he has things to click that are offscreen.
+This is an `UPDATE` in SQL, which we could write as
+```sql
+materialize=> update viewport set y1 = -15, y2 = 10 where user = 'brent';
+UPDATE 1
+```
+This results in five new rows at what would be the bottom of `brent`'s screen.
+```
+1660071720485	1	11	 0 0 0 0 0 1 2 . . . . . . . . . . . . . .
+1660071720485	1	12	 0 0 0 0 0 0 1 . . . . . . . . . . . . . .
+1660071720485	1	13	 2 1 1 1 1 0 1 . . . . . . . . . . . . . .
+1660071720485	1	15	 . . . . . . . . . . . . . . . . . . . . .
+1660071720485	1	14	 . . . X 2 1 2 . . . . . . . . . . . . . .
+```
+
+Although it is hard to demonstrate with whole lines at a time, if you tail `composited` then horizontal scrolling is lean as well.
+You only receive the new information you require: whole rows and columns, rather than all of the central data you already know.
+
+## Winding down
+
+There is a lot of neat stuff going on here that I didn't talk about.
+
+I didn't explain why I put `materialized` in some `create view` statements and not in others.
+There is a good reason, based on sharing that data out to multiple players to avoid re-doing work.
+
+We didn't scale this up at all.
+We could have!
+We'll do that in the future, once there is a better UI in place.
+
+We didn't show off several of Materialize's other neat super-powers.
+We didn't spin up new clusters to house materialized views for each player.
+We didn't transparently rescale clusters housing the main game materialized views.
+We didn't show off the strong consistency properties as two players make concurrent updates.
+
+We'll try and get back to these, but we'll also spill out posts about each of these cool properties in the months to come.
